--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Webstudio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -446,39 +446,43 @@
         <form class="modal-form">
           <label class="form-field">
             <span class="modal-form-input-desk"> Name </span>
-
-            <input
-              type="text"
-              name="user-name"
-              class="modal-form-input"
-              required
-              pattern="^[a-zA-Zа-яА-я]+$"
-              minlength="2"
-            />
+            <span class="input-form-wrapper">
+              <input
+                type="text"
+                name="user-name"
+                class="modal-form-input"
+                required
+                pattern="^[a-zA-Zа-яА-я]+$"
+                minlength="2"
+              />
+              <span class="modal-form-input-icon"></span>
+            </span>
           </label>
 
           <label class="form-field">
             <span class="modal-form-input-desk"> Phone </span>
-
-            <input
-              type="tel"
-              name="user-phone"
-              class="modal-form-input"
-              required
-              pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
-              title="xxx-xxx-xx-xx"
-          /></label>
+            <span class="input-form-wrapper">
+              <input
+                type="tel"
+                name="user-phone"
+                class="modal-form-input"
+                required
+                pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
+                title="xxx-xxx-xx-xx" />
+              <span class="modal-form-input-icon"></span></span
+          ></label>
 
           <label class="form-field">
             <span class="modal-form-input-desk"> Email </span>
-
-            <input
-              type="e_mail"
-              name="user-mail"
-              class="modal-form-input"
-              required
-              pattern="^[]"
-          /></label>
+            <span class="input-form-wrapper">
+              <input
+                type="e_mail"
+                name="user-mail"
+                class="modal-form-input"
+                required
+                pattern="^[]" />
+              <span class="modal-form-input-icon"></span></span
+          ></label>
 
           <label class="form-field">
             <span class="modal-form-input-desk"> Comment </span>
