--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <section class="section">
         <div class="container">
-          <h2 visually-hidden class="">our possibilities</h2>
+          <h2 visually-hidden class="visually-hidden">ourpossibilities</h2>
 
           <ul class="header-list list">
             <li class="title icon-delivery">
@@ -455,7 +455,13 @@
                 pattern="^[a-zA-Zа-яА-я]+$"
                 minlength="2"
               />
-              <span class="modal-form-input-icon"></span>
+              <span class="modal-form-input-icon">
+                <svg class="drop-icon" width="24" height="24">
+                  <use
+                    href="./images/icons.svg/sprait.svg#icon-person-form"
+                  ></use>
+                </svg>
+              </span>
             </span>
           </label>
 
@@ -469,7 +475,10 @@
                 required
                 pattern="[0-9]{3}-[0-9]{3}-[0-9]{2}-[0-9]{2}"
                 title="xxx-xxx-xx-xx" />
-              <span class="modal-form-input-icon"></span></span
+              <span class="modal-form-input-icon">
+                <svg class="drop-icon" width="24" height="24">
+                  <use href="./images/icons.svg/sprait.svg#icon-phone"></use>
+                </svg> </span></span
           ></label>
 
           <label class="form-field">
@@ -481,7 +490,10 @@
                 class="modal-form-input"
                 required
                 pattern="^[]" />
-              <span class="modal-form-input-icon"></span></span
+              <span class="modal-form-input-icon">
+                <svg class="drop-icon" width="24" height="24">
+                  <use href="./images/icons.svg/sprait.svg#icon-email"></use>
+                </svg> </span></span
           ></label>
 
           <label class="form-field">
