--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <section class="section">
         <div class="container">
-          <h2 visually-hidden class="visually-hidden">ourpossibilities</h2>
+          <h2 visually-hidden class="visually-hidden">our possibilities</h2>
 
           <ul class="header-list list">
             <li class="title icon-delivery">
@@ -518,7 +518,8 @@
               I accept the terms and conditions of the<a
                 class="privacy-link"
                 href="#"
-                >Privacy Policy</a
+              >
+                <span class="policy">Privacy Policy</span></a
               >
             </p>
           </label>
