--- a/index.html
+++ b/index.html
@@ -506,24 +506,15 @@
             ></textarea>
           </label>
 
-          <input
-            id="user-policy"
-            type="checkbox"
-            name="user_policy"
-            class="modal-form-check"
-          />
-          <label class="form-privacy">
-            <input class="checkbox visually-hidden" name="privacy" />
-            <p class="accept-policy-text">
-              I accept the terms and conditions of the<a
-                class="privacy-link"
-                href="#"
-              >
-                <span class="policy">Privacy Policy</span></a
-              >
-            </p>
-          </label>
-          <button type="submit" class="modal-form-submint">Send</button>
+          <input id="user-policy" type="checkbox" class="modal-form-check" />
+          <span class="modal-form-policy-check"></span>
+          <label for="user-policy" class="modal-form-check-desk"
+            >I accept the terms and conditions of the
+            <a href="#"> Privacy Policy</a></label
+          >
+          <div class="madal-btn-drop">
+            <button type="submit" class="modal-form-submint">Send</button>
+          </div>
         </form>
       </div>
     </div>
