--- a/index.html
+++ b/index.html
@@ -508,8 +508,8 @@
 
           <input id="user-policy" type="checkbox" class="modal-form-check" />
           <span class="modal-form-policy-check"></span>
-          <label for="user-policy" class="modal-form-check-desk"
-            >I accept the terms and conditions of the
+          <label for="user-policy" class="modal-form-check-text"
+            >I accept the terms and conditions of the&nbsp;
             <a href="#"> Privacy Policy</a></label
           >
           <div class="madal-btn-drop">
