--- a/index.html
+++ b/index.html
@@ -427,7 +427,38 @@
             </li>
           </ul>
         </div>
+
+        <!-- ------------------------------SUBSCRIBE-------------------- -->
+        <div class="container-subscribe">
+          <b class="subscribe-title">Subscribe</b>
+          <form class="subscribe-footer">
+          <div class="subscribe-cont">
+            <label class="subscribe-emeil">
+              <span class="subscribe-desk"> Email </span>
+              <span class="subscribe-emeil-wrapper">
+                <input
+                  type="e_mail"
+                  name="user-mail"
+                  class="subscribe-e-meil-input"
+                  required
+                  placeholder="E-meil"
+                  pattern="^[]"
+                /> </span
+            ></label>
+            <button type="submit" class="footer-btn-subscribe">
+              Subscribe
+              <span class="subscribe-input-icon">
+                <svg class="sub-icon" width="24" height="24">
+                  <use href="./images/icons.svg/sprait.svg#icon-subscribe"></use>
+                </svg>
+              </span>
+            </button>
+          </div>
+        </div>
+        </form>
       </div>
+
+      <!--  --------------------------------------------------->
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
@@ -506,7 +537,11 @@
             ></textarea>
           </label>
 
-          <input id="user-policy" type="checkbox" class="modal-form-check" />
+          <input
+            id="user-policy"
+            type="checkbox"
+            class="modal-form-check visually-hidden"
+          />
           <span class="modal-form-policy-check"></span>
           <label for="user-policy" class="modal-form-check-text"
             >I accept the terms and conditions of the&nbsp;
