--- a/index.html
+++ b/index.html
@@ -431,7 +431,11 @@
         <!-- ------------------------------SUBSCRIBE-------------------- -->
         <div class="container-subscribe">
           <b class="subscribe-title">Subscribe</b>
-          <form class="subscribe-footer">
+          <form 
+          class="subscribe-footer"
+          name="subscribe"
+          autocomplete="on"
+          >
           <div class="subscribe-cont">
             <label class="subscribe-emeil">
               <span class="subscribe-desk"> Email </span>
