--- a/index.html
+++ b/index.html
@@ -549,11 +549,11 @@
           <span class="modal-form-policy-check"></span>
           <label for="user-policy" class="modal-form-check-text"
             >I accept the terms and conditions of the&nbsp;
-            <a href="#"> Privacy Policy</a></label
-          >
+            <a href="#"> Privacy Policy</a></label>
           <div class="madal-btn-drop">
             <button type="submit" class="modal-form-submint">Send</button>
           </div>
+          
         </form>
       </div>
     </div>
