--- a/portfolio.html
+++ b/portfolio.html
@@ -319,6 +319,40 @@
                   </li>
                 </ul>
                </div>
+               <!-- --------------SUBSCRIBE-------------- -->
+               <div class="container-subscribe">
+          <b class="subscribe-title">Subscribe</b>
+          <form 
+          class="subscribe-footer"
+          name="subscribe"
+          autocomplete="on"
+          >
+          <div class="subscribe-cont">
+            <label class="subscribe-emeil">
+              <span class="subscribe-desk"> Email </span>
+              <span class="subscribe-emeil-wrapper">
+                <input
+                  type="e_mail"
+                  name="user-mail"
+                  class="subscribe-e-meil-input"
+                  required
+                  placeholder="E-meil"
+                  pattern="^[]"
+                /> </span
+            ></label>
+            <button type="submit" class="footer-btn-subscribe">
+              Subscribe
+              <span class="subscribe-input-icon">
+                <svg class="sub-icon" width="24" height="24">
+                  <use href="./images/icons.svg/sprait.svg#icon-subscribe"></use>
+                </svg>
+              </span>
+            </button>
+          </div>
+        </div>
+        </form>
+      </div>
+
     </footer>
   </body>
 </html>
