--- a/index.html
+++ b/index.html
@@ -540,17 +540,19 @@
               placeholder="Input text"
             ></textarea>
           </label>
-
-          <input
+<!-- ----------------------------CHECKBOX------------------- -->
+            <input
+            class="modal-form-check visually-hidden"
             id="user-policy"
             type="checkbox"
-            class="modal-form-check visually-hidden"
+            name="user-policy"  
           />
           <span class="modal-form-policy-check"></span>
           <label for="user-policy" class="modal-form-check-text"
             >I accept the terms and conditions of the&nbsp;
             <a href="#"> Privacy Policy</a></label>
-          <div class="madal-btn-drop">
+         
+            <div class="madal-btn-drop">
             <button type="submit" class="modal-form-submint">Send</button>
           </div>
           </form>
