--- a/portfolio.html
+++ b/portfolio.html
@@ -320,38 +320,31 @@
                 </ul>
                </div>
                <!-- --------------SUBSCRIBE-------------- -->
-               <div class="container-subscribe">
-          <b class="subscribe-title">Subscribe</b>
-          <form 
-          class="subscribe-footer"
-          name="subscribe"
-          autocomplete="on"
-          >
-          <div class="subscribe-cont">
-            <label class="subscribe-emeil">
-              <span class="subscribe-desk"> Email </span>
-              <span class="subscribe-emeil-wrapper">
-                <input
-                  type="e_mail"
-                  name="user-mail"
-                  class="subscribe-e-meil-input"
-                  required
-                  placeholder="E-meil"
-                  pattern="^[]"
-                /> </span
-            ></label>
-            <button type="submit" class="footer-btn-subscribe">
-              Subscribe
-              <span class="subscribe-input-icon">
-                <svg class="sub-icon" width="24" height="24">
-                  <use href="./images/icons.svg/sprait.svg#icon-subscribe"></use>
-                </svg>
-              </span>
-            </button>
-          </div>
+                <div>
+          <form>
+            <p class="footer-title">Subscribe</p>
+
+            <label for="email-contact"></label>
+            <div class="footer-form">
+              <input
+                class="footer-input"
+                type="email"
+                name="subscribe"
+                id="email-contact"
+                placeholder="E-mail"
+                required
+              />
+            <button class="footer-btn-subscribe" type="submit">
+                Subscribe
+                <span>
+                  <svg class="sub-icon" width="24" height="24">
+                    <use href="./images/icons.svg/sprait.svg#icon-subscribe"></use>
+                  </svg>
+                </span>
+              </button>
+            </div>
+          </form>
         </div>
-        </form>
-      </div>
 
     </footer>
   </body>
