--- a/index.html
+++ b/index.html
@@ -64,10 +64,9 @@
         </div>
       </section>
       <!-- section2 -->
-
       <section class="section">
         <div class="container">
-          <h2 visually-hidden class="visually-hidden">our possibilities</h2>
+          <h2 our-possibilities class="visually-hidden">our possibilities</h2>
 
           <ul class="header-list list">
             <li class="title icon-delivery">
@@ -118,9 +117,6 @@
           </ul>
         </div>
       </section>
-
-      <!-- section4 -->
-
       <section class="section background">
         <div class="container our-team">
           <h2 class="title-ferst">Our Team</h2>
@@ -220,7 +216,6 @@
                 </ul>
               </div>
             </li>
-
             <li class="team">
               <img
                 src="./images/camila1.jpg"
@@ -268,7 +263,6 @@
                 </ul>
               </div>
             </li>
-
             <li class="team">
               <img
                 class="imagis-portfolio"
@@ -376,8 +370,6 @@
         </div>
       </section>
     </main>
-    <!-- footer -->
-
     <footer class="footer">
       <div class="container footer-container">
         <div class="logo-box">
@@ -427,13 +419,10 @@
             </li>
           </ul>
         </div>
-
-        <!-- ------------------------------SUBSCRIBE-------------------- -->
         <div>
           <form>
             <p class="footer-title">Subscribe</p>
-
-            <label for="email-contact"></label>
+           <label for="email-contact"></label>
             <div class="footer-form">
               <input
                 class="footer-input"
@@ -466,8 +455,6 @@
             ></use>
           </svg>
         </button>
-
-        <!-- ----------DZ-6------- -->
         <p class="drop-text">Leave your contacts and we will call you back</p>
         <form class="modal-form">
           <label class="form-field">
@@ -490,7 +477,6 @@
               </span>
             </span>
           </label>
-
           <label class="form-field">
             <span class="modal-form-input-desk"> Phone </span>
             <span class="input-form-wrapper">
@@ -506,12 +492,11 @@
                   <use href="./images/icons.svg/sprait.svg#icon-phone"></use>
                 </svg> </span></span
           ></label>
-
           <label class="form-field">
             <span class="modal-form-input-desk"> Email </span>
             <span class="input-form-wrapper">
               <input
-                type="e_mail"
+                type="email"
                 name="user-mail"
                 class="modal-form-input"
                 required
@@ -521,7 +506,6 @@
                   <use href="./images/icons.svg/sprait.svg#icon-email"></use>
                 </svg> </span></span
           ></label>
-
           <label class="form-field">
             <span class="modal-form-input-desk"> Comment </span>
             <textarea
@@ -530,7 +514,6 @@
               placeholder="Text-input"
             ></textarea>
           </label>
-<!-- ----------------------------CHECKBOX------------------- -->
            <div class="modal-field">
          <input
             class="modal-form-check visually-hidden"
@@ -541,9 +524,7 @@
           <label for="user-policy" class="modal-form-check-text"
             >I accept the terms and conditions of the&nbsp;
             <a href="#"> Privacy Policy</a></label>
-
            </div>
-
             <div class="madal-btn-drop">
             <button type="submit" class="modal-form-submint">Send</button>
           </div>
