--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <!-- section2 -->
       <section class="section">
         <div class="container">
-          <h2 our-possibilities class="visually-hidden">our possibilities</h2>
+          <h2 class="visually-hidden">our possibilities</h2>
 
           <ul class="header-list list">
             <li class="title icon-delivery">
@@ -422,7 +422,7 @@
         <div>
           <form>
             <p class="footer-title">Subscribe</p>
-           <label for="email-contact"></label>
+            <label for="email-contact"></label>
             <div class="footer-form">
               <input
                 class="footer-input"
@@ -432,18 +432,21 @@
                 placeholder="E-mail"
                 required
               />
-            <button class="footer-btn-subscribe" type="submit">
+              <button class="footer-btn-subscribe" type="submit">
                 Subscribe
                 <span>
                   <svg class="sub-icon" width="24" height="24">
-                    <use href="./images/icons.svg/sprait.svg#icon-subscribe"></use>
+                    <use
+                      href="./images/icons.svg/sprait.svg#icon-subscribe"
+                    ></use>
                   </svg>
                 </span>
               </button>
             </div>
           </form>
         </div>
-   </footer>
+      </div>
+    </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
@@ -514,23 +517,24 @@
               placeholder="Text-input"
             ></textarea>
           </label>
-           <div class="modal-field">
-         <input
-            class="modal-form-check visually-hidden"
-            id="user-policy"
-            type="checkbox"
+          <div class="modal-field">
+            <input
+              class="modal-form-check visually-hidden"
+              id="user-policy"
+              type="checkbox"
             />
-          <span class="modal-form-policy-check"></span>
-          <label for="user-policy" class="modal-form-check-text"
-            >I accept the terms and conditions of the&nbsp;
-            <a href="#"> Privacy Policy</a></label>
-           </div>
-            <div class="madal-btn-drop">
+            <span class="modal-form-policy-check"></span>
+            <label for="user-policy" class="modal-form-check-text"
+              >I accept the terms and conditions of the&nbsp;
+              <a href="#"> Privacy Policy</a></label
+            >
+          </div>
+          <div class="madal-btn-drop">
             <button type="submit" class="modal-form-submint">Send</button>
           </div>
-          </form>
+        </form>
       </div>
     </div>
-   <script src="./js/modal.js"></script>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
