--- a/index.html
+++ b/index.html
@@ -420,9 +420,8 @@
           </ul>
         </div>
         <div>
-          <form>
+          <form class="email-subscribe">
             <p class="footer-title">Subscribe</p>
-            <label for="email-contact"></label>
             <div class="footer-form">
               <input
                 class="footer-input"
