--- a/index.html
+++ b/index.html
@@ -420,32 +420,28 @@
           </ul>
         </div>
         <div>
-          <form class="email-subscribe">
-            <p class="footer-title">Subscribe</p>
-            <div class="footer-form">
-              <input
-                class="footer-input"
-                type="email"
-                name="subscribe"
-                id="email-contact"
-                placeholder="E-mail"
-                required
-              />
-              <button class="footer-btn-subscribe" type="submit">
-                Subscribe
-                <span>
-                  <svg class="sub-icon" width="24" height="24">
-                    <use
-                      href="./images/icons.svg/sprait.svg#icon-subscribe"
-                    ></use>
-                  </svg>
-                </span>
-              </button>
-            </div>
+
+          <div class="footer-subscribe">
+          <p class="footer-title">Subscribe</p>
+          <form class="footer-form">
+            <input
+              class="footer-imput"
+              type="email"
+              name="mail"
+              placeholder="E-mail"
+              required
+            />
+            <button class="footer-btn" type="submit">
+              <span>Subscribe</span>
+              <svg class="footer-btn-icon">
+                <use href="./images/icons.svg/sprait.svg#icon-subscribe"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
     </footer>
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" class="modal-close-btn" data-modal-close>
@@ -537,3 +533,26 @@
     <script src="./js/modal.js"></script>
   </body>
 </html>
+
+
+
+<!-- ---------------test--------------- -->
+
+
+<!-- <div class="footer-subscribe">
+          <p class="subscribe-title">Subscribe</p>
+          <form class="footer-form">
+            <input
+              class="footer-imput"
+              type="email"
+              name="mail"
+              placeholder="E-mail"
+            />
+            <button class="footer-btn" type="submit">
+              <span>Subscribe</span>
+              <svg class="footer-btn-icon">
+                <use href="./images/icons.svg#icon-airplane"></use>
+              </svg>
+            </button>
+          </form>
+        </div> -->
