--- a/portfolio.html
+++ b/portfolio.html
@@ -306,29 +306,23 @@
           </ul>
         </div>
         <div>
-          <form>
-            <p class="footer-title">Subscribe</p>
-            <label for="email-contact"></label>
-            <div class="footer-form">
-              <input
-                class="footer-input"
-                type="email"
-                name="subscribe"
-                id="email-contact"
-                placeholder="E-mail"
-                required
-              />
-              <button class="footer-btn-subscribe" type="submit">
-                Subscribe
-                <span>
-                  <svg class="sub-icon" width="24" height="24">
-                    <use
-                      href="./images/icons.svg/sprait.svg#icon-subscribe"
-                    ></use>
-                  </svg>
-                </span>
-              </button>
-            </div>
+
+<div class="footer-subscribe">
+          <p class="footer-title">Subscribe</p>
+          <form class="footer-form">
+            <input
+              class="footer-imput"
+              type="email"
+              name="mail"
+              placeholder="E-mail"
+              required
+            />
+            <button class="footer-btn" type="submit">
+              <span>Subscribe</span>
+              <svg class="footer-btn-icon">
+                <use href="./images/icons.svg/sprait.svg#icon-subscribe"></use>
+              </svg>
+            </button>
           </form>
         </div>
       </div>
